--- a/src/devplex.GitServer.Web/Views/Home/Index.cshtml
+++ b/src/devplex.GitServer.Web/Views/Home/Index.cshtml
@@ -1,12 +1,14 @@
-﻿<h1>devplex GitServer</h1>
+﻿@model DirectoryTreeViewModel
+<h1>devplex GitServer</h1>
 <p>
-  Feel free to contribute and/or report issues @@ <a href="https://github.com/devplex/GitServer" target="_blank">GitHub</a>
+  Feel free to contribute and/or report any issues @@ <a href="https://github.com/devplex/GitServer" target="_blank">GitHub</a>
 </p>
 
 <h2>How to create a repository?</h2>
 <p>
   Since there is (currently) no UI to initialize a new repository, it will be done automagically while cloning it for the first time.
 </p>
-<code>
-  git clone @Request.Url.Scheme://@Request.Url.Authority/company/our/fancy/project.git
-</code>
+<code>git clone @Url.CloneUrl("/company/our/fancy/project.git")</code>
+
+<h2>Repositories</h2>
+@Html.Partial("_DirectoryTree", Model.Tree)
