--- a/src/devplex.GitServer.Web/Views/Shared/_Layout.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_Layout.cshtml
@@ -4,10 +4,22 @@
   <head>
     <title>devplex.GitServer</title>
     @Styles.Render("~/content/css")
+    <link rel="icon" href="@Url.Content("~/Content/images/devplex-git-icon.png")" type="image/png" />
+    <meta name="robots" content="index, nofollow" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/style-devplex.css")" type="text/css" />
   </head>
   <body>
-    <div>
-        @RenderBody()
+    <div class="container">
+      <div class="menu">
+        <a href="/git/">
+          <img src="@Url.Content("~/Content/images/devplex-git-logo.png")" width=75 height=90 border=0 alt="git" />
+        </a>
+        @Html.ActionLink("Home", "Index")
+        @Html.ActionLink("Help", "Help")
+      </div>
+      <div class="main">
+          @RenderBody()
+      </div>
     </div>
   </body>
 </html>
