--- a/src/devplex.GitServer.Web/Views/Home/Help.cshtml
+++ b/src/devplex.GitServer.Web/Views/Home/Help.cshtml
@@ -298,6 +298,10 @@ n2Xkw9dJh1tybLEvrG8=
 
 <h2>How to commit/push files to a repository?</h2>
 <p>
+  Run the following command on the command prompt to add all changes to the commit:
+</p>
+<code>git add .</code>
+<p>
   Run the following command on the command prompt to commit to the local repository:
 </p>
 <code>git commit --m {YourMessage}</code>
@@ -393,3 +397,7 @@ n2Xkw9dJh1tybLEvrG8=
   Run the following command on the command diff a file:
 </p>
 <code>git difftool {PathToFileToDiff}</code>
+<p>
+  Run the following command on the command merge a file:
+</p>
+<code>git mergetool {PathToFileToDiff}</code>
