--- a/src/devplex.GitServer.Web/Views/Home/Help.cshtml
+++ b/src/devplex.GitServer.Web/Views/Home/Help.cshtml
@@ -284,7 +284,7 @@ n2Xkw9dJh1tybLEvrG8=
 <p>
   Run the following command on the command prompt
 </p>
-<code>git add -A</code>
+<code>git add --all .</code>
 
 <h2>How to commit/push files to a repository?</h2>
 <p>
@@ -300,7 +300,7 @@ n2Xkw9dJh1tybLEvrG8=
 <p>
   Run the following command on the command prompt to add all changes to the commit:
 </p>
-<code>git add .</code>
+<code>git add --all .</code>
 <p>
   Run the following command on the command prompt to commit to the local repository:
 </p>
