Enabled impersonation and checked permissions.

--- a/src/devplex.GitServer.Web/Views/Home/Help.cshtml
+++ b/src/devplex.GitServer.Web/Views/Home/Help.cshtml
@@ -367,7 +367,7 @@ n2Xkw9dJh1tybLEvrG8=
 </p>
 <code>[w] + [q]</code>
 
-<h2>How to configure BEyond Compare a visual merge tool?</h2>
+<h2>How to configure Beyond Compare a visual merge tool?</h2>
 <p>
   Open or create the file 
 </p>
