--- a/src/devplex.GitServer.Web/Views/Shared/_DirectoryTree.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_DirectoryTree.cshtml
@@ -1,14 +1,14 @@
 ﻿@model DirectoryTree
-@helper RenderTree(IEnumerable<BrowseDirectory> directories, int level = 1)
+@helper RenderTree(IEnumerable<ITreeDirectory> directories, int level = 1)
 {
   <div style="margin-left: @(level * 5)px;">
-    @foreach (var directory in directories.OrderBy(x => x.Type).ThenBy(x => x.Name))
+    @foreach (var directory in directories.OrderBy(x => x.GetType()).ThenBy(x => x.Name))
     {
-      if (directory.Type == DirectoryType.Directory)
+      if (directory is NamespaceDirectory)
       {
       <i class="icon-folder-open"></i> @directory.Name
       }
-      else if (directory.Type == DirectoryType.Repository)
+      else if (directory is RepositoryDirectory)
       {
       <i class="icon-code-fork"></i> @directory.Name @:(@Url.RepositoryCloneUrl(directory.Path))
       <br />
