--- a/src/devplex.GitServer.Web/Views/Home/Index.cshtml
+++ b/src/devplex.GitServer.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@model DirectoryTreeViewModel
+﻿@model TreeViewModel
 <h1>devplex GitServer</h1>
 
 
 <h2>Repositories</h2>
-@Html.Partial("_DirectoryTree", Model.Tree)
+@Html.Partial("_DirectoryTree", Model)
