--- a/src/devplex.GitServer.Web/Views/Repository/Log.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Log.cshtml
@@ -3,6 +3,10 @@
 <ul>
   @foreach (var commit in Model)
   {
-<li>@commit.Message (@commit.AuthorName on @commit.Timestamp)</li>
+    <li>
+      @commit.Message<br/>
+      @Html.Gravatar(commit.AuthorMailAddress)
+    </li>
   }
 </ul>
+
