--- a/src/devplex.GitServer.Web/Views/Shared/_Layout.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_Layout.cshtml
@@ -1,27 +1,27 @@
 ﻿<!DOCTYPE html>
 
 <html>
-  <head>
-    <title>devplex.GitServer</title>
-    @Styles.Render("~/content/css")
-    <link rel="icon" href="@Url.Content("~/Content/images/devplex-git-icon.png")" type="image/png" />
-    <meta name="robots" content="index, nofollow" />
-    <link rel="stylesheet" href="@Url.Content("~/Content/style-devplex.css")" type="text/css" />
-    <link rel="stylesheet" href="@Url.Content("~/Content/devplex.gitserver.css")" type="text/css" />
-    <link href="~/Content/Prettify/prettify.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="menu">
-        <a href="/git/">
-          <img src="@Url.Content("~/Content/images/devplex-git-logo.png")" width=75 height=90 border=0 alt="git" />
-        </a>
-        @Html.ActionLink("Home", "Index", "Home")
+<head>
+  <title>devplex.GitServer</title>
+  <meta name="robots" content="index, nofollow" />
+  <link rel="icon" href="@Url.Content("~/Content/images/devplex-git-icon.png")" type="image/png" />
+  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400" rel="stylesheet" type="text/css" />
+  @Styles.Render("~/content/css")
+</head>
+<body>
+  <nav class="site-navigation">
+    <a href="@Url.Action("Index", "Home")" class="logo">
+      <img src="@Url.Content("~/Content/images/devplex-git-logo.png")" width="75" height="90" alt="" />
+    </a>
+    <ul class="no-bullets">
+      <li>
         @Html.ActionLink("Help", "Help", "Home")
-      </div>
-      <div class="main">
-          @RenderBody()
-      </div>
-    </div>
-  </body>
+      </li>
+    </ul>
+    <div class="clearfix"></div>
+  </nav>
+  <section class="main">
+    @RenderBody()
+  </section>
+</body>
 </html>
