--- a/src/devplex.GitServer.Web/Views/Repository/Log.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Log.cshtml
@@ -1,11 +1,17 @@
 ﻿@model List<CommitMessage>
 
-<ul>
+<ul class="no-bullets commits">
   @foreach (var commit in Model)
   {
     <li>
-      @commit.Message<br/>
       @Html.Gravatar(commit.AuthorMailAddress)
+      <div class="commit-info">
+        @commit.Message
+        <div class="commit-meta">
+          <time datetime="@commit.Timestamp.ToString("yyyy-MM-ddTHH:mm:ssZ")">@commit.Timestamp</time> by @commit.AuthorName
+        </div>
+      </div>
+      <div class="clearfix"></div>
     </li>
   }
 </ul>
