B: Changed webfont protocol

--- a/src/devplex.GitServer.Web/Views/Shared/_Layout.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
   <title>devplex.GitServer</title>
   <meta name="robots" content="index, nofollow" />
   <link rel="icon" href="@Url.Content("~/Content/images/devplex-git-icon.png")" type="image/png" />
-  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400" rel="stylesheet" type="text/css" />
+  <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400" rel="stylesheet" type="text/css" />
   @Styles.Render("~/content/css")
 </head>
 <body>
