R: Moved help to separate controller

--- a/src/devplex.GitServer.Web/Views/Shared/_Layout.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     </a>
     <ul class="no-bullets">
       <li>
-        @Html.ActionLink("Help", "Help", "Home")
+        @Html.ActionLink("Help", "Index", "Help")
       </li>
     </ul>
     <div class="clearfix"></div>
