--- a/src/devplex.GitServer.Web/Views/Repository/Log.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Log.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<CommitMessage>
+﻿@model IEnumerable<GitCommitMessage>
 
 <ul class="no-bullets commits">
   @foreach (var commit in Model)
