F: Added some details to the repository tree.

--- a/src/devplex.GitServer.Web/Views/Repository/Log.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Log.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GitCommitMessage>
+﻿@model IEnumerable<CommitMessage>
 
 <ul class="no-bullets commits">
   @foreach (var commit in Model)
