--- a/src/devplex.GitServer.Web/Views/Repository/Tree.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Tree.cshtml
@@ -1,2 +1,2 @@
-﻿@model TreeViewModel
-@Html.Partial("_DirectoryTree", Model)
+﻿@model RepositoryTreeViewModel
+@Html.Partial("_RepositoryTree", Model)
